fixed background scrolling, blur on safari

--- a/public/main.css
+++ b/public/main.css
@@ -10,9 +10,11 @@
         filter: opacity(1);
         transform: translateX(0);
         backdrop-filter: none;
+        -webkit-backdrop-filter: none;
     }
     100% {
         backdrop-filter: blur(2px);
+        -webkit-backdrop-filter: blur(2px);
     }
 }
 
@@ -26,9 +28,11 @@
         filter: opacity(1);
         transform: unset;
         backdrop-filter: none;
+        -webkit-backdrop-filter: none;
     }
     100% {
         backdrop-filter: blur(2px);
+        -webkit-backdrop-filter: blur(2px);
     }
 }
 
@@ -265,6 +269,10 @@ p.button:active {
 
     align-items: end;
     justify-content: center;
+}
+
+body:has(#votePopup.show) {
+  overflow: hidden;
 }
 
 body.mobile #votePopup.show {
